[dispatch-portal-backend] Send email on cts dispatch creation for production
